# EventHubKzNew

./: .env  .env.example  .env.prod.example  .gitignore  Caddyfile  README.md  docker-compose.caddy.yml  docker-compose.override.yml  docker-compose.yml  pom.xml  start.sh
.github/workflows/: ci.yml
api-gateway/: pom.xml
audit-service/: Dockerfile  pom.xml
auth-service/: pom.xml
db-init/audit/: 01-create-audit-db.sql
docs/: backups.md
eureka-server/: pom.xml
event-service/: Dockerfile  pom.xml
eventhubkz-common/: pom.xml
file-service/: Dockerfile  pom.xml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  (+3 more)
ingestion-service/: Dockerfile  pyproject.toml
ingestion-service/app/: api.py  config.py  db.py  extractor.py  main.py  models.py  pipeline.py  prefilter.py  producer.py  repository.py  scheduler.py  sources.py  telegram.py  validate.py
ingestion-service/tests/: test_api.py  test_extractor.py  test_health.py  test_pipeline.py  test_prefilter.py  test_repository.py  test_sources.py  test_telegram.py  test_validate.py
ingestion-service/tests/fixtures/: tme_kzdev.html
like-service/: pom.xml
load-test/: README.md  events-load.js
loadtest/: README.md  result-after.txt  spike.js
notification-service/: pom.xml
registration-service/: Dockerfile  pom.xml
scripts/: backup-db.sh  prod-smoke.sh  restore-db.sh
search-service/: pom.xml
seed/: event_questions.sql  events.sql  likes.sql  registrations.sql  requests.sql  seed.sh  users.sql
tag-service/: Dockerfile  pom.xml
user-service/: pom.xml
(+308 files in other folders)
