[project]
name = "ingestion-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "apscheduler>=3.10",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.21",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "respx>=0.21"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
